# Seminar_workflow_automation

./: .gitignore  README.md  index.html  main.py  pyproject.toml  requirements.txt  workflow_auto_en.html
data/source/: word_raw.txt
flows/01_quick_start/: prefect.yaml  simple_etl.py
flows/02_use_asset_track_output/: etl_asset_tracking.py
flows/03_workflows_in_prefect/: task_flow_param_example.py
notebooks/: 01.create_python_env_in_CASD.ipynb  02.setup_prefect_working_env.ipynb  03.work_pool_management_in_prefect.ipynb  04.workflow_management_in_prefect.ipynb  05.deployment_management_in_prefect.ipynb  06.run_spark_with_prefect.ipynb  07.Compare_with_airflow.ipynb  08.Spark_sedona_workflow_template_with_prefect.ipynb
projects/01_quick_start/: prefect.yaml
projects/02_concurrency_test/: prefect.yaml
projects/02_concurrency_test/flows/: long_running_job.py
projects/03_workflows_in_prefect/: prefect.yaml
projects/03_workflows_in_prefect/flows/: etl_asset_tracking.py  flow_with_artifact.py  flow_with_errors.py  flow_with_errors_improved.py  flow_with_errors_state_control.py  flow_with_logs.py  flow_with_params.py  flow_with_retry.py  subtask_flow.py  task_flow_param_example.py
projects/04_deployment_in_prefect/flows/: deploy_flow_with_cron_scheduler.py  deploy_flow_with_interval_scheduler.py  deploy_flow_with_params.py  deploy_flow_with_rrule_scheduler.py
projects/05_run_spark_with_prefect/: prefect.yaml
projects/05_run_spark_with_prefect/flows/: prefect_spark_flow_template.py  spark_submit_flow.py  spark_wc_flow.py
(+1 files in other folders)
